# olymp-geometry

./: .gitignore  CMakeLists.txt  README.md  compile_and_test.sh
docs/: Doxyfile
docs/html/: _c_make_files_23_818_84_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_818_84_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _c_make_files_23_820_82_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_820_82_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _g_mock_faq.html  _g_mock_for_dummies.html  _r_e_a_d_m_e_8md.html  annotated.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-actions_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-cardinalities_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-function-mocker_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-matchers_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-actions_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-more-matchers_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-nice-strict_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock-spec-builders_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2gmock_8h_source.html  build_2__deps_2googletest-src_2googlemock_2include_2gmock_2internal_2custom_2gmock-matchers_8h_source.html  (+1806 more)
lib/: olymp-geometry.cpp  olymp-geometry.h
tests/: vector_length.cpp
(+138 files in other folders)
